2006-03-09  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
	* include/winspool.h (JOB_CONTROL_*,JOB_STATUS_*): Define.
	Thanks to:   Roland Schwingel <rolandschwingel at users dot sf dot net>

2006-03-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
	* include/shellapi.h  [_WIN32_IE >= 0x0600]
	(SEE_MASK_NOZONECHECKS,SEE_MASK_FLAG_LOG_USAGE): Define on
	Windows XP SP1 and Windows XP respectively.

2006-03-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
	* include/shellapi.h (NOTIFYICONDATA_V*_SIZE): Define.
	Thanks to:  Daniel Atallah <datallah at users dot sf dot net>
	* include/shellapi.h  [_WIN32_IE >= 0x0500]
	(NIS_*): Introduced in Version 5.0.

2006-03-06  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/wingdi.h (CS_*): Correct WINVER guard on
	Image Color Matching colour definitions.

2006-03-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (SFGAO_ISSLOW): Define.
	(SFGAO_DISPLAYATTRMASK): Define in terms of preceding display
	attribute constants.

2006-03-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h  [WINVER >= 0x0500]
	(GRADIENT_FILL_*,*_EMBEDED): Included in Windows 2000 and later.
	Thanks to: David A. Capello <dacap at users dot sf dot net>

2006-03-05  Paul J. Lucas  <pauljlucas@users.sourceforge.net>

	* include/wininet.h (INTERNET_CONNECTED_INFO): Define structure.
	(INTERNET_STATE_*): Define flags.
	(INTERNET_OPTION_CONNECTED_STATE): Define constant.

2006-03-05  Chris Wilson  <chris+mingw@qwirx.com>

	* include/sddl.h: New file.

2006-02-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/ntifs.h (FILE_ID_FULL_DIRECTORY_INFORMATION): Revert
	last change.
	Remove file level #pragma pack(push,4)/#pragma pop.

2006-02-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/ddk/ntifs.h (FILE_ID_FULL_DIRECTORY_INFORMATION): Add filler
	value to force correct alignment.

2006-02-19  Danny Smith  <dannysmith@users.sourceforge.net>
