@@ -10,7 +10,17 @@ extern "C" {
 #define DI_CHANNEL 1
 #define DI_CHANNEL_WRITE 2
 #define DI_READ_SPOOL_JOB 3
-#define	FORM_BUILTIN	1
+#define	DI_MEMORYMAP_WRITE	0x1
+#define	FORM_USER	0x0
+#define	FORM_BUILTIN	0x1
+#define	FORM_PRINTER	0x2
+#if (_WIN32_WINNT >= 0x0500)
+#define	DSPRINT_PUBLISH		0x00000001
+#define	DSPRINT_UPDATE		0x00000002
+#define	DSPRINT_UNPUBLISH	0x00000004
+#define	DSPRINT_REPUBLISH	0x00000008
+#define	DSPRINT_PENDING		0x80000000
+#endif
 #define	JOB_CONTROL_PAUSE		1
 #define	JOB_CONTROL_RESUME		2
 #define	JOB_CONTROL_CANCEL		3
